            o Cluebringer is not installed due to package missing in official repo.
            o SOGo is not installed due to package missing in upstream (SOGo) repo.

        - OpenBSd 5.7. Notes:
            o MySQL is not support, please use MariaDB instead.

    * Drop support for old distribution releases:
        - Ubuntu 12.04. Please use Ubuntu 14.04 LTS instead.

    * Improvements:
        - [LDAP] Allow mailing list account to use attributes: gidNumber,
          memberUid.
        - Don't install both Apache and Nginx, just one of them.

          Debian/Ubuntu package maintainer over-designed the post-install
          script, it will restart service after package installed, if we have
          both installed, installing another one will fail, because network
          ports are used by the first one.

          Same reason as above, if we have both installed, upgrading both of
          them will trigger service restarting too. This may cause the
          currently running web service cannot start.

        - Make Dovecot subscribe newly created folder automatically.
          Thanks Michael Telatynski <postmaster _at_ webdevguru.co.uk> for the
          patch.
        - Allow to restrict user to login for specified IP addresses or
          networks, multiple IP addresses or networks must be separated by
          comma.

          o LDAP: IP addresses or networks must be listed in attribute
                  `allowNets` in user object.
          o SQL: IP addresses or networks must be listed in SQL column
                  `mailbox.allow_nets`.

        - Bypass greylisting for some big ISPs
          (samples/cluebringer/greylisting-whitelist.sql).
        - Setup Fail2ban to monitor SOGo log file.
        - Add two new Fail2ban filters to help catch spam.

    * Fixed issues:
        - Install package `unrar` as rar unarchiver on RHEL/CentOS/Debian/Ubuntu.
        - Incorrect log file and owner/group in /etc/logrotate.d/policyd.